--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^3.5.3",
     "bulma": "^0.7.4",
     "vue": "^2.6.6",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
